# dredging_robot-drob

./: readme.md
drob_application/: package.xml  setup.cfg  setup.py
drob_application/drob_application/: get_robot_pose.py  init_robot_pose.py  multi_nav_to_pose.py  nav_to_pose.py
drob_clean/: package.xml  setup.cfg  setup.py
drob_clean/drob_clean/: drob_clean.py
drob_control/: CMakeLists.txt  package.xml
drob_control/config/: controllers.yaml  display_robot_model.rviz
drob_control/launch/: display_robot.launch.py  four_wheel_control.launch.py  gazebo_sim.launch.py
drob_control/meshes/: base_link.STL  lbw.STL  lfw.STL  rbw.STL  rfw.STL
drob_control/src/: four_wheel_controller.cpp  simple_test.launch.py  test_data_flow.py
drob_control/urdf/: car.csv  car.gv  car.urdf  car.xacro
drob_control/urdf/drob/: base.urdf.xacro  drob.control.xacro  drob.urdf.xacro  stl_based_drob.urdf.xacro
drob_control/urdf/drob/action/: wheel.urdf.xacro
drob_control/urdf/drob/plugins/: gazebo_control_plugin.xacro  gazebo_sensor_plugin.xacro
drob_control/urdf/drob/sensor/: imu.urdf.xacro  lidar.urdf.xacro
drob_control/world/: test.world
drob_control/world/world1/: model.sdf
drob_navigation2/: CMakeLists.txt  package.xml
drob_navigation2/config/: nav2_params.yaml
drob_navigation2/launch/: navigation2.launch.py
drob_navigation2/maps/: room.pgm  room.yaml
motion_control_system/: CMakeLists.txt  package.xml
nav2_custom_controller/: package.xml
nav2_custom_controller/src/: custom_controller.cpp
nav2_custom_planner/: CMakeLists.txt  package.xml
nav2_custom_planner/include/nav2_custom_planner/: nav2_custom_planner.hpp
nav2_custom_planner/launch/: realtime_dredging.launch.py
nav2_custom_planner/src/: dredging_task_node.cpp  dynamic_planner_node.cpp  nav2_custom_planner.cpp  tf_pose_publisher.cpp
ros2_to_plc/: package.xml  setup.cfg  setup.py
ros2_to_plc/config/: wheel_speed_modbus_bridge.yaml
ros2_to_plc/resource/: ros2_to_plc
ros2_to_plc/ros2_to_plc/: address_scanner.py  wheel_speed_modbus_bridge_direct.py
