<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_to_plc</name>
  <version>0.0.0</version>
  <description>ROS2 Modbus节点，支持TCP通信和轮子速度桥接</description>
  <maintainer email="2480665841@qq.com">chen</maintainer>
  <license>TODO: License declaration</license>

  <!-- 运行时依赖 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-pymodbus</exec_depend>

  <!-- 构建依赖 -->
  <build_depend>ament_index_python</build_depend>

  <!-- 测试依赖 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
